--- a/frontend/src/app/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/claims/create-claim/create-claim.component.html
@@ -788,7 +788,7 @@
                                        [(ngModel)]="applicationForm.housingClass" [readonly]="readonlyChooseJK"
                                        formControlName="housingClass"/>
                               </div>
-                              <div class="col-sm" *ngIf="applicationForm.operationTypeId?.code != '001002' && applicationForm.objectTypeId?.code != '003001' ">
+                              <div class="col-sm" *ngIf="applicationForm.operationTypeId?.code == '001002' ">
                                 <label class="control-labels">Состояние</label>
                                 <input type="text" id="housingCondition" class="form-control"
                                        [(ngModel)]="applicationForm.housingCondition" [readonly]="readonlyChooseJK"
@@ -833,7 +833,7 @@
                                   placeholder="{{ 'claim.material' | translate }}">
                                 </ng-select>
                               </div>
-                              <div class="col-sm" *ngIf="applicationForm.operationTypeId?.code != '001002' && applicationForm.objectTypeId?.code != '003001'">
+                              <div class="col-sm" *ngIf="applicationForm.operationTypeId?.code == '001002'">
                                 <label for="yearOfConstruction" translate>claim.buildYear</label>
                                 <input type="number" id="yearOfConstruction" class="form-control"
                                        [(ngModel)]="applicationForm.yearOfConstruction" [readonly]="readonlyChooseJK"
@@ -844,6 +844,7 @@
                                 <ng-select
                                   [items]="elevatorType"
                                   [(ngModel)]="applicationForm.typeOfElevatorList"
+                                  [multiple]="true"
                                   [readonly]="readonlyChooseJK"
                                   formControlName="typeOfElevatorList"
                                   bindValue="value"
