--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -72,6 +72,8 @@
   <!--/.Navbar -->
 
   <router-outlet [hidden]="loading"></router-outlet>
+  <cdk-drag-drop-connected-sorting-group-example>loading</cdk-drag-drop-connected-sorting-group-example>
+
   <toast-messages></toast-messages>
 
   <!-- Footer -->
