--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -9,15 +9,15 @@
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-         aria-selected="true" translate>board.commonBoard</a>
+         aria-selected="true" (click)="sortStatusesDic(1)" translate>board.commonBoard</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
-         aria-selected="false" translate>board.sellBoard</a>
+         aria-selected="false" (click)="sortStatusesDic(2)" translate>board.sellBoard</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
-         aria-selected="false" translate>board.buyerBoard</a>
+         aria-selected="false" (click)="sortStatusesDic(3)" translate>board.buyerBoard</a>
     </li>
   </ul>
   <div class="tab-content" id="myTabContent">
@@ -39,156 +39,26 @@
       </div>
       <br>
       <div class="row" cdkDropListGroup>
-        <div class="col-sm">
-          <div class="alert bg-primary text-white font-weight-bolder boardTitle" role="alert" translate>
-            board.firstContact
+        <div class="col-sm" *ngFor="let data of appStatusesData;let i = index">
+          <div class="alert bg-secondary text-white font-weight-bolder boardTitle text-center" role="alert" translate>
+            {{data.label}}<span class="badge badge-danger ml-2">{{data.boardData?.size != null ? data.boardData?.size: 0}}</span>
           </div>
           <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="firstContact"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of firstContact" cdkDrag>
+          <div *ngIf="data.boardData"
+               cdkDropList
+               [cdkDropListData]="data.boardData.data"
+               class="example-list dropItem"
+               (cdkDropListDropped)="drop($event)">
+            <div *ngFor="let item of data.boardData.data; let i = index" cdkDrag>
               <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
+                <h5 class="card-header bg-info">{{item.id}} &nbsp;Покупка</h5>
                 <div class="card-body">
-                  <p class="card-text"></p>
+                  <p class="card-text">{{item.numberOfRooms}} комнатная, кв {{item.totalArea}}</p>
+                  <p class="card-text">{{item.district.name.nameRu}}</p>
+                  <p class="card-text">цена: {{item.price}}</p>
                 </div>
                 <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
-                </div>
-              </div>
-              <br/>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="alert alert-success boardTitle" role="alert" translate>board.meet</div>
-          <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="meet"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of meet" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
-                <div class="card-body">
-                  <p class="card-text"></p>
-                </div>
-                <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
-                </div>
-              </div>
-              <br/>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="alert alert-info boardTitle" role="alert" translate>board.dvou</div>
-          <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="dvou"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of dvou" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
-                <div class="card-body">
-                  <p class="card-text"></p>
-                </div>
-                <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
-                </div>
-              </div>
-              <br/>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="alert alert-dark boardTitle" role="alert" translate>board.adv</div>
-          <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="blockItem"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of blockItem" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
-                <div class="card-body">
-                  <p class="card-text"></p>
-                </div>
-                <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
-                </div>
-              </div>
-              <br/>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="alert alert-warning boardTitle" role="alert" translate>board.photoset</div>
-          <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="photoset"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of photoset" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
-                <div class="card-body">
-                  <p class="card-text"></p>
-                </div>
-                <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
-                </div>
-              </div>
-              <br/>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="alert alert-danger boardTitle" role="alert" translate>board.show</div>
-          <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="show"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of show" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
-                <div class="card-body">
-                  <p class="card-text"></p>
-                </div>
-                <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
-                </div>
-              </div>
-              <br/>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="alert alert-light boardTitle" role="alert" translate>board.closedContract</div>
-          <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="closedContract"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of closedContract" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
-                <div class="card-body">
-                  <p class="card-text"></p>
-                </div>
-                <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
+                  <i class="fa fa-phone"><a href="tel:8{{item.phone}}"> {{item.phone | mask: '+0 (000) 000-0000'}}</a><br/>{{item.fullname}}</i>
                 </div>
               </div>
               <br/>
@@ -212,112 +82,26 @@
       </div>
       <br>
       <div class="row" cdkDropListGroup>
-        <div class="col-sm">
-          <div class="alert bg-primary text-white font-weight-bolder boardTitle" role="alert" translate>
-            board.firstContact
+        <div class="col-sm" *ngFor="let data of appStatusesData;let i = index">
+          <div class="alert bg-secondary text-white font-weight-bolder boardTitle text-center" role="alert" translate>
+            {{data.label}}<span class="badge badge-danger ml-2">{{data.boardData?.size != null ? data.boardData?.size: 0}}</span>
           </div>
           <br/>
           <div
             cdkDropList
-            [cdkDropListData]="firstContact"
-            class="example-list"
+            [cdkDropListData]="data.boardData.data"
+            class="example-list dropItem"
             (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of firstContact" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
+            <div *ngFor="let item of data.boardData.data; let i = index" cdkDrag>
+              <div class="card " >
+                <h5 class="card-header bg-info">{{item.id}} &nbsp;Покупка</h5>
                 <div class="card-body">
-                  <p class="card-text"></p>
+                  <p class="card-text">{{item.numberOfRooms}} комнатная, кв {{item.totalArea}}</p>
+                  <p class="card-text">{{item.district.name.nameRu}}</p>
+                  <p class="card-text">цена: {{item.price}}</p>
                 </div>
                 <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
-                </div>
-              </div>
-              <br/>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="alert alert-success boardTitle" role="alert" translate>board.dvou</div>
-          <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="meet"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of meet" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
-                <div class="card-body">
-                  <p class="card-text"></p>
-                </div>
-                <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
-                </div>
-              </div>
-              <br/>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="alert alert-info boardTitle" role="alert" translate>board.show</div>
-          <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="dvou"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of dvou" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
-                <div class="card-body">
-                  <p class="card-text"></p>
-                </div>
-                <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
-                </div>
-              </div>
-              <br/>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="alert alert-dark boardTitle" role="alert" translate>board.avanse</div>
-          <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="blockItem"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of blockItem" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
-                <div class="card-body">
-                  <p class="card-text"></p>
-                </div>
-                <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
-                </div>
-              </div>
-              <br/>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="alert alert-warning boardTitle" role="alert" translate>board.closedContract</div>
-          <br/>
-          <div
-            cdkDropList
-            [cdkDropListData]="photoset"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div *ngFor="let item of photoset" cdkDrag>
-              <div class="card">
-                <h5 class="card-header bg-info">{{item}}</h5>
-                <div class="card-body">
-                  <p class="card-text"></p>
-                </div>
-                <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:870778945612"> 870778945612</a></i>
+                  <i class="fa fa-phone"><a href="tel:8{{item.phone}}"> {{item.phone | mask: '+0 (000) 000-0000'}}</a><br/>{{item.fullname}}</i>
                 </div>
               </div>
               <br/>
