--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -41,7 +41,8 @@
       <div class="row" cdkDropListGroup>
         <div class="col-sm" *ngFor="let data of appStatusesData;let i = index">
           <div class="alert bg-secondary text-white font-weight-bolder boardTitle text-center" role="alert" translate>
-            {{data.label}}<span class="badge badge-danger ml-2">{{data.boardData?.size != null ? data.boardData?.size: 0}}</span>
+            {{data.label}}<span
+            class="badge badge-danger ml-2">{{data.boardData?.size != null ? data.boardData?.size : 0}}</span>
           </div>
           <br/>
           <div *ngIf="data.boardData"
@@ -51,14 +52,15 @@
                (cdkDropListDropped)="drop($event)">
             <div *ngFor="let item of data.boardData.data; let i = index" cdkDrag>
               <div class="card">
-                <h5 class="card-header bg-info">{{item.id}} &nbsp;Покупка</h5>
-                <div class="card-body">
-                  <p class="card-text">{{item.numberOfRooms}} комнатная, кв {{item.totalArea}}</p>
-                  <p class="card-text">{{item.district.name.nameRu}}</p>
-                  <p class="card-text">цена: {{item.price}}</p>
+                <h5 class="card-header">{{item.id}} &nbsp;Покупка</h5>
+                <div class="card-body" [class]="getBgColorBySumm(item.price)">
+                  <p class="card-text">{{item.numberOfRooms}} комнатная, кв {{item.totalArea}}
+                    {{item.district.name.nameRu}}
+                    цена: {{item.price}}</p>
                 </div>
                 <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:8{{item.phone}}"> {{item.phone | mask: '+0 (000) 000-0000'}}</a><br/>{{item.fullname}}</i>
+                  <i class="fa fa-phone"><a
+                    href="tel:8{{item.phone}}"> {{item.phone | mask: '+0 (000) 000-0000'}}</a><br/>{{item.fullname}}</i>
                 </div>
               </div>
               <br/>
@@ -84,7 +86,8 @@
       <div class="row" cdkDropListGroup>
         <div class="col-sm" *ngFor="let data of appStatusesData;let i = index">
           <div class="alert bg-secondary text-white font-weight-bolder boardTitle text-center" role="alert" translate>
-            {{data.label}}<span class="badge badge-danger ml-2">{{data.boardData?.size != null ? data.boardData?.size: 0}}</span>
+            {{data.label}}<span
+            class="badge badge-danger ml-2">{{data.boardData?.size != null ? data.boardData?.size : 0}}</span>
           </div>
           <br/>
           <div
@@ -93,15 +96,16 @@
             class="example-list dropItem"
             (cdkDropListDropped)="drop($event)">
             <div *ngFor="let item of data.boardData.data; let i = index" cdkDrag>
-              <div class="card " >
-                <h5 class="card-header bg-info">{{item.id}} &nbsp;Покупка</h5>
-                <div class="card-body">
-                  <p class="card-text">{{item.numberOfRooms}} комнатная, кв {{item.totalArea}}</p>
-                  <p class="card-text">{{item.district.name.nameRu}}</p>
-                  <p class="card-text">цена: {{item.price}}</p>
+              <div class="card ">
+                <h5 class="card-header">{{item.id}} &nbsp;Покупка</h5>
+                <div class="card-body" [class]="getBgColorBySumm(item.price)">
+                  <p class="card-text">{{item.numberOfRooms}} комнатная, кв {{item.totalArea}}
+                    {{item.district.name.nameRu}}
+                    цена: {{item.price}}</p>
                 </div>
                 <div class="card-footer">
-                  <i class="fa fa-phone"><a href="tel:8{{item.phone}}"> {{item.phone | mask: '+0 (000) 000-0000'}}</a><br/>{{item.fullname}}</i>
+                  <i class="fa fa-phone"><a
+                    href="tel:8{{item.phone}}"> {{item.phone | mask: '+0 (000) 000-0000'}}</a><br/>{{item.fullname}}</i>
                 </div>
               </div>
               <br/>
@@ -109,6 +113,12 @@
           </div>
         </div>
       </div>
+
     </div>
+  </div>
+  <div class="position-static createClaimBtn fixed-bottom">
+    <button type="button" class="btn btn-success btn-circle btn-xl" (click)="dnHref('create-claim')"><i
+      class="fa fa-plus"></i>
+    </button>
   </div>
 </div>
