--- a/frontend/src/app/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/claims/create-claim/create-claim.component.html
@@ -14,10 +14,10 @@
          aria-controls="impressions"
          aria-selected="false" translate>claim.impressions</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" id="journals-tab" data-toggle="tab" href="#journals" role="tab" aria-controls="journals"
-         aria-selected="false" translate>claim.journals</a>
-    </li>
+<!--    <li class="nav-item">-->
+<!--      <a class="nav-link" id="journals-tab" data-toggle="tab" href="#journals" role="tab" aria-controls="journals"-->
+<!--         aria-selected="false" translate>claim.journals</a>-->
+<!--    </li>-->
   </ul>
   <div class="tab-content" id="myTabContent" [formGroup]="applicationForm">
     <div class="loader" *ngIf="loading" style="text-align: center">
@@ -959,11 +959,11 @@
       2
     </div>
     <div class="tab-pane fade" id="impressions" role="tabpanel" aria-labelledby="impressions-tab">
-      3
+      <app-acts></app-acts>
     </div>
-    <div class="tab-pane fade" id="journals" role="tabpanel" aria-labelledby="journals-tab">
-      3
-    </div>
+<!--    <div class="tab-pane fade" id="journals" role="tabpanel" aria-labelledby="journals-tab">-->
+<!--      3-->
+<!--    </div>-->
   </div>
 </div>
 <br/>
