--- a/frontend/src/app/staffs/staffs.component.html
+++ b/frontend/src/app/staffs/staffs.component.html
@@ -5,30 +5,54 @@
       <div class="container">
         <div class="row">
           <div class="col-sm row">
-            <div class="col-sm-7 input-group">
-              <input class="form-control" type="text" [(ngModel)]="search" placeholder="Search" aria-label="Search">
-              <div class="input-group-append">
-                <button type="button" (click)="getUserInfo()">
-                  <span class="input-group-text " id="basic-text"><i class="fa fa-search"
-                                                                     aria-hidden="true"></i></span>
-                </button>
+            <div class="col-sm">
+              <div>
+                <input class="form-control" type="text" [(ngModel)]="filter.search" placeholder="Search"
+                          aria-label="Search">
+              </div>
+              <div style="margin-top: 10px">
+                <ng-select
+                  placeholder="Роль"
+                  bindValue="value"
+                  [items]="roles"
+                  [(ngModel)]="filter.roles">
+                </ng-select>
               </div>
             </div>
             <div class="col-sm">
-              <button type="button" class="btn btn-sm btn-primary" (click)="findObjects(1)">
-                View all users
-              </button>
+              <div>
+                <button type="button" class="form-control btn-primary"  (click)="findObjects(0)">
+                  Все пользователи
+                </button>
+              </div>
+              <div style="margin-top: 10px">
+                <ng-select
+                  placeholder="Группа"
+                  [items]="groups"
+                  bindValue="value"
+                  [(ngModel)]="filter.group"
+                >
+                </ng-select>
+
+              </div>
+
             </div>
           </div>
           <div class="col-sm"></div>
-          <div class="col-sm row" style="text-align: right">
+          <div class="col-sm" style="text-align: right">
+            <div>
+              <button type="button" class="form-control btn-primary" (click)="openModal(template); addUser()"> Создать
+                пользователя
+              </button>
+            </div>
+            <div style="margin-top: 10px">
+              <button type="button" class="form-control btn-default" (click)="getUserInfo()"> Поиск пользователя
+                <span><i class="fa fa-search" aria-hidden="true"></i></span>
+              </button>
+            </div>
 
 
           </div>
-          <!--<button type="button" class="btn btn-primary" style="    right: 10px;">-->
-          <!--Unblock users-->
-          <!--</button>-->
-          <button type="button" class="btn btn-primary" (click)="openModal(template); addUser()"> Add user</button>
 
 
           <ng-template #template>
@@ -63,12 +87,25 @@
                 <input type="text" class="col-sm form-control" name="Last" [(ngModel)]="formData.surname">
               </div>
               <div class="col-sm">
-                <label class="col-sm col-form-label">Активность<span class="text-danger">&nbsp;*</span></label>
-                <div class="btn-group">
-                  <label class="btn btn-primary" [(ngModel)]="formData.isActive" ngDefaultControl
-                         btnRadio="true" tabindex="0" role="button">On</label>
-                  <label class="btn btn-primary" [(ngModel)]="formData.isActive" ngDefaultControl
-                         btnRadio="false" tabindex="0" role="button">Off</label>
+                <label class="col-sm col-form-label">Активность {{formData.isActive}}<span
+                  class="text-danger">&nbsp;*</span></label>
+                <!--<div class="btn-group">-->
+                <!--<label class="btn btn-primary" name="isActidve" [(ngModel)]="formData.isActive" ngDefaultControl-->
+                <!--btnRadio="true" tabindex="0" role="button">On</label>-->
+                <!--<label class="btn btn-primary" name="isActidve" [(ngModel)]="formData.isActive" ngDefaultControl-->
+                <!--btnRadio="false" tabindex="0" role="button">Off</label>-->
+                <!--</div>-->
+                <div class="custom-control custom-checkbox">
+                  <div class="custom-control custom-radio">
+                    <input type="radio" id="men" name="isActive" value="true" class="custom-control-input"
+                           [(ngModel)]="formData.isActive">
+                    <label class="custom-control-label" for="men" translate>on</label>
+                  </div>
+                  <div class="custom-control custom-radio">
+                    <input type="radio" id="women" name="isActive" value="false" class="custom-control-input"
+                           [(ngModel)]="formData.isActive">
+                    <label class="custom-control-label" for="women" translate>off</label>
+                  </div>
                 </div>
               </div>
               <div class="col-sm">
@@ -86,7 +123,7 @@
                 <ng-select name="residentialComplexes"
                            [items]="groups"
                            bindValue="value"
-                           [(ngModel)]="formData.groups">
+                           [(ngModel)]="formData.group">
                 </ng-select>
               </div>
               <div class="col-sm" style="text-align: right">
@@ -94,7 +131,7 @@
                 <button type="button" class="btn btn-primary" (click)="submit()" style="margin: 10px">
                   Сохранить
                 </button>
-                <button type="button" class="btn btn-light" (click)="modalRef.hide()" style="margin: 10px" >
+                <button type="button" class="btn btn-light" (click)="modalRef.hide()" style="margin: 10px">
                   Отмена
                 </button>
 
@@ -106,7 +143,7 @@
         </div>
 
 
-        <div class="row">
+        <div class="row" style="margin-top: 10px">
           <div class="col-sm">
             <table class="table table-bordered text-center table-sm">
               <thead class="text-center">
@@ -133,10 +170,10 @@
                           (click)="editData(user);openModal(template)">
                     Редактировать
                   </button>
-                  <button type="button" class="btn btn-sm btn-light" style="margin: 10px"
-                          (click)="delUser(user)">
-                    Удалить
-                  </button>
+                  <!--<button type="button" class="btn btn-sm btn-light" style="margin: 10px"-->
+                  <!--(click)="delUser(user)">-->
+                  <!--Удалить-->
+                  <!--</button>-->
                 </td>
               </tr>
               </tbody>
