HTC-141 Модуль управлением справочниками

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -68,6 +68,11 @@
         <span translate>staffs.title</span>
       </a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" (click)="dnHref('dic-control')">
+        <span translate>Управление справочниками</span>
+      </a>
+    </li>
   </ul>
   <!--/.Navbar -->
 
