--- a/frontend/src/app/dic-control/dic-control.component.html
+++ b/frontend/src/app/dic-control/dic-control.component.html
@@ -1,64 +1,211 @@
 <div class="card-body card-bg">
   <div class="card">
     <div class="card-body">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <div style="border: solid 1px black; padding: 5px">
-              <h3>Все справочники</h3>
-            </div>
-            <div style="border: solid 1px black; padding: 5px">
-              <a (click)="loadDictionary('COUNTRIES')"><h5>Страна</h5></a>
-              <a (click)="loadDictionary('CITIES')"><h5>Город</h5></a>
-              <a (click)="loadDictionary('DISTRICTS')"><h5>Районы</h5></a>
-              <a (click)="loadDictionary('STREETS')"><h5>Улицы</h5></a>
-              <a (click)="loadDictionary('PROPERTY_DEVELOPERS')"><h5>Застройщик</h5></a>
-              <a (click)="loadDictionary('TYPE_OF_ELEVATOR')"><h5>Тип лифта</h5></a>
-              <a (click)="loadDictionary('MATERIALS_OF_CONSTRUCTION')"><h5>Материал постройки (квартира)</h5></a>
-              <a (click)="loadDictionary('MATERIALS_OF_CONSTRUCTION')"><h5>Материал постройки (дом)</h5></a>
-              <a (click)="loadDictionary('SEWERAGE_SYSTEMS')"><h5>Канализация</h5></a>
-              <a (click)="loadDictionary('HEATING_SYSTEMS')"><h5>Отопление</h5></a>
-              <a (click)="loadDictionary('PARKING_TYPES')"><h5>Парковка</h5></a>
-              <a (click)="loadDictionary('YARD_TYPES')"><h5>Двор</h5></a>
-              <a (click)="loadDictionary('POSSIBLE_REASONS_FOR_BIDDING')"><h5>Возможные причины торга</h5></a>
-            </div>
+      <!--<div class="container">-->
+      <div class="row">
+        <div class="col-sm-2">
+          <div style="border: solid 1px black; padding: 5px">
+            <h3>Все справочники</h3>
+          </div>
+          <div style="border: solid 1px black; padding: 5px">
+            <a (click)="loadDictionaryForEdit('residential-complexes'); resident=true"><h5>ЖК</h5></a>
+            <a (click)="loadDictionaryForEdit('COUNTRIES'); resident=false"><h5>Страна</h5></a>
+            <a (click)="loadDictionaryForEdit('CITIES'); resident=false"><h5>Город</h5></a>
+            <a (click)="loadDictionaryForEdit('DISTRICTS'); resident=false"><h5>Районы</h5></a>
+            <a (click)="loadDictionaryForEdit('STREETS'); resident=false"><h5>Улицы</h5></a>
+            <a (click)="loadDictionaryForEdit('PROPERTY_DEVELOPERS'); resident=false"><h5>Застройщик</h5></a>
+            <a (click)="loadDictionaryForEdit('TYPE_OF_ELEVATOR'); resident=false"><h5>Тип лифта</h5></a>
+            <a (click)="loadDictionaryForEdit('MATERIALS_OF_CONSTRUCTION'); resident=false"><h5>Материал постройки
+              (квартира)</h5></a>
+            <a (click)="loadDictionaryForEdit('MATERIALS_OF_CONSTRUCTION'); resident=false"><h5>Материал постройки
+              (дом)</h5></a>
+            <a (click)="loadDictionaryForEdit('SEWERAGE_SYSTEMS'); resident=false"><h5>Канализация</h5></a>
+            <a (click)="loadDictionaryForEdit('HEATING_SYSTEMS'); resident=false"><h5>Отопление</h5></a>
+            <a (click)="loadDictionaryForEdit('PARKING_TYPES'); resident=false"><h5>Парковка</h5></a>
+            <a (click)="loadDictionaryForEdit('YARD_TYPES'); resident=false"><h5>Двор</h5></a>
+            <a (click)="loadDictionaryForEdit('POSSIBLE_REASONS_FOR_BIDDING'); resident=false"><h5>Возможные причины
+              торга</h5></a>
+          </div>
+        </div>
+
+
+        <div class="col-sm-10">
+          <div style="border: solid 1px black; padding: 5px">
+            <a><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
+            <a style="margin-left: 10px"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
+            <a style="margin-left: 10px"><i style="color:red" class="fa fa-times-circle fa-2x"></i></a>
           </div>
 
+          <div style="border: solid 1px black; padding: 5px;
+    overflow: scroll;">
+            <table *ngIf="resident" class="table table-bordered text-center">
+              <thead class="text-center">
+              <tr>
+                <th>Страна</th>
+                <th>Город</th>
+                <th>Район</th>
+                <th>Улица</th>
+                <th>Номер здания (дома)</th>
+                <th>Номер дома (дробь/буква/строение)</th>
+                <th>Название дома (ЖК)</th>
+                <th>Год постройки</th>
+                <th>Застройщик</th>
+                <th>Этажность дома</th>
+                <th>Количество подъездов</th>
+                <th>Количество квартир</th>
+                <th>Квартир на площадке</th>
+                <th>Высота потолков</th>
+                <th>Материал постройки</th>
+                <th>Класс жилья</th>
+                <th>Состояние</th>
+                <th>Тип лифта</th>
+                <th>Консьерж</th>
+                <th>Колясочная</th>
+                <th>Парковка</th>
+                <th>Двор</th>
+                <th>Детская площадка</th>
+              </tr>
+              </thead>
+              <tbody style="cursor: pointer">
+              <tr *ngFor="let dic of residentialComplexes;let i = index">
+                <td>{{dic.code}}</td>
+                <td>
+                  <ng-select
+                    bindValue="value"
+                    bindLabel="label"
+                    [items]="cities"
+                    [(ngModel)]="dic.cityId">
+                  </ng-select>
+                </td>
+                <td>
+                  <ng-select
+                    bindValue="value"
+                    bindLabel="label"
+                    [items]="districts"
+                    [(ngModel)]="dic.districtId">
+                  </ng-select>
+                </td>
+                <td>
+                  <ng-select
+                    bindValue="value"
+                    bindLabel="label"
+                    [items]="streets"
+                    [(ngModel)]="dic.streetId">
+                  </ng-select>
+                </td>
+                <td>
+                  {{dic.houseNumber}}
+                </td>
+                <td>
+                  {{dic.houseNumberFraction}}
+                </td>
+                <td>
+                  {{dic.houseName}}
+                </td>
+                <td>
+                  {{dic.yearOfConstruction}}
+                </td>
+                <td>
+                  <ng-select
+                    bindValue="value"
+                    bindLabel="label"
+                    [items]="propertyDevelopers"
+                    [(ngModel)]="dic.propertyDeveloperId">
+                  </ng-select>
+                </td>
+                <td>
+                  {{dic.numberOfFloors}}
+                </td>
+                <td>
+                  {{dic.numberOfEntrances}}
+                </td>
+                <td>
+                  {{dic.numberOfApartments}}
+                </td>
+                <td>
+                  {{dic.apartmentsOnTheSite}}
+                </td>
+                <td>
+                  {{dic.ceilingHeight}}
+                </td>
+                <td>
+                  <ng-select
+                    bindValue="value"
+                    bindLabel="label"
+                    [items]="materialsOfConstruction"
+                    [(ngModel)]="dic.materialOfConstructionId">
+                  </ng-select>
+                </td>
+                <td>
+                  {{dic.housingClass}}
+                </td>
+                <td>
+                  {{dic.housingCondition}}
+                </td>
+                <td>
+                  <ng-select
+                    [multiple]="true"
+                    bindValue="value"
+                    bindLabel="label"
+                    [items]="typeOfElevator"
+                    [(ngModel)]="dic.typeOfElevator">
+                  </ng-select>
+                </td>
+                <td>
+                  {{dic.concierge}}
+                </td>
+                <td>
+                  {{dic.wheelchair}}
+                </td>
+                <td>
+                  <ng-select
+                    [multiple]="true"
+                    bindValue="value"
+                    bindLabel="label"
+                    [items]="parkingTypes"
+                    [(ngModel)]="dic.parkingTypeIds">
+                  </ng-select>
+                </td>
+                <td>
+                  <ng-select
+                    bindValue="value"
+                    bindLabel="label"
+                    [items]="yardTypes"
+                    [(ngModel)]="dic.yardType">
+                  </ng-select>
+                </td>
+                <td>
+                  {{dic.playground}}
+                </td>
+              </tr>
+              </tbody>
+            </table>
 
-          <div class="col-sm-8">
-            <div style="border: solid 1px black; padding: 5px">
-              <a><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
-              <a style="margin-left: 10px"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
-              <a style="margin-left: 10px"><i style="color:red" class="fa fa-times-circle fa-2x"></i></a>
-            </div>
-
-            <div style="border: solid 1px black; padding: 5px">
-                   <table class="table table-bordered text-center table-sm">
-                <thead class="text-center">
-                <tr>
-                  <th>Код</th>
-                  <th>nameEn</th>
-                  <th>nameKz</th>
-                  <th>nameRu</th>
-                </tr>
-                </thead>
-                <tbody style="cursor: pointer">
-                <tr *ngFor="let dic of dictionary;let i = index">
-                  <td>{{dic.code}}</td>
-                  <td>{{dic.nameEn}}</td>
-                  <td>{{dic.nameKz}}</td>
-                  <td>{{dic.nameRu}}</td>
-                </tr>
-                </tbody>
-              </table>
-            </div>
+            <table *ngIf="!resident" class="table table-bordered text-center table-sm">
+              <thead class="text-center">
+              <tr>
+                <th>Код</th>
+                <th>nameEn</th>
+                <th>nameKz</th>
+                <th>nameRu</th>
+              </tr>
+              </thead>
+              <tbody style="cursor: pointer">
+              <tr *ngFor="let dic of dictionary;let i = index">
+                <td>{{dic.code}}</td>
+                <td>{{dic.nameEn}}</td>
+                <td>{{dic.nameKz}}</td>
+                <td>{{dic.nameRu}}</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
 
-
-
-        </div>
 
       </div>
+
+      <!--</div>-->
     </div>
   </div>
 </div>
